# logicaffeine

./: .gitignore  BLOG_PLAN.md  CHANGELOG.md  CIRQ_IMPLEMENTATION_PLAN.md  CLAUDE.md  CLI_AUDIT.md  CODE_EDITOR_PLAN.md  COMPETITION_DISCOVERIES.md  CONTRIBUTING.md  Cargo.toml  DR_RESEARCH.md  Dioxus.toml  EXODIA.md  FAQ.md  FEATURE_MATRIX.md  FIX_SPECIALIZER_PLAN.md  FRIEND_PLANS.md  FUTURE_TELEPORT.md  FUTURISTIC.md  HW_EXPANSION.md  IMPERATIVE.md  IMPLEMENTATION_PLAN.md  LICENSE.md  LOGICAL.md  LOGIC_TEXTBOOK.md  LOGOS_DOCUMENTATION.md  LOGOS_FRONTEND_DOCS.md  LOGOS_IMPERATIVE_DOCS.md  LOGOS_LOGICAL_DOCS.md  LOGOS_QUICKGUIDE.md  MAKE_IT_A_LISP.md  MATRIX_FEATURES_DOC.md  NEW_README.md  OPTIMIZER_PLAN.md  PACKAGING_PLAN.md  PROGRAMMERS_LANGUAGE_STARTER.md  PROPER_FUTAMURA.md  PROPOSAL_USER_PLATFORM.md  QUANTUM_BACKEND_SPEC.md  QUANTUM_MAP.md  (+22 more)
apps/logicaffeine_cli/: CHANGELOG.md  Cargo.toml  README.md
apps/logicaffeine_cli/src/: cli.rs  compile.rs  lib.rs  main.rs  ui.rs
apps/logicaffeine_cli/tests/: build_passthrough.rs  clean.rs  completions.rs  deps.rs  doc.rs  doctor.rs  emit.rs  emit_wasm.rs  fmt.rs  logic.rs  project.rs  prove.rs  repl.rs  sat.rs  ux.rs
apps/logicaffeine_web/: CHANGELOG.md  Cargo.toml  Dioxus.toml  HOMEPAGE_REDESIGN_PROPOSAL.md  PRODUCT_TOUR_PROPOSAL.md  README.md  index.html  privacy.html  terms.html
apps/logicaffeine_web/assets/: opfs-worker.js  sitemap.xml  style.css
apps/logicaffeine_web/public/: _headers  install.ps1  install.sh  llms.txt  sitemap.xml
apps/logicaffeine_web/src/: ast_bridge.rs  audio.rs  content.rs  generator.rs  learn_state.rs  lib.rs  main.rs  progress.rs  sitemap.rs  storage.rs  unlock.rs
apps/logicaffeine_web/tests/: compile_pipeline.rs  guide_examples.rs  hardware_examples.rs  learn_examples.rs  propositional_logic.rs  ssr_render.rs  wasm_aot_coverage.rs
crates/logicaffeine_base/: CHANGELOG.md  Cargo.toml  README.md
crates/logicaffeine_base/src/: hash.rs  intern.rs  lib.rs  numeric.rs
crates/logicaffeine_compile/: CHANGELOG.md  Cargo.toml  README.md
crates/logicaffeine_compile/src/: codegen.rs  codegen_c.rs  compile.rs  debug.rs  defeasible.rs  diagnostic.rs  interpreter.rs  lib.rs  loader.rs  loop_shape.rs  repl.rs  resolve_division.rs  sourcemap.rs  tail_call.rs  ui_bridge.rs  verification.rs
crates/logicaffeine_compile/tests/: cdcl_profile.rs  grid_solve_full.rs  grid_solver_studio_simon.rs  interpreter_args.rs  loop_split_knapsack.rs  narrow_corpus_differential.rs  phase_codegen_determinism.rs  phase_opt_completeness.rs  phase_opt_graph.rs  phase_opt_trace.rs  pipe_new_syntax.rs  policy_capability_interp.rs  repl_session.rs  report1_ffi.rs  report1_policy.rs  runpath_bce_vm.rs  theory_development.rs  trust_tiers_simon.rs  wasm_aot_args.rs  wasm_aot_lock.rs  wasm_aot_unit.rs  wasm_concurrency.rs  wasm_interp_net.rs  wasm_jit_browser.rs  wasm_jit_differential.rs  wasm_simon_studio.rs  wh_studio_routing.rs  zone_mapped_from_var.rs
crates/logicaffeine_data/: CHANGELOG.md  Cargo.toml  README.md
crates/logicaffeine_data/src/: indexing.rs  lib.rs  types.rs
crates/logicaffeine_forge/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/logicaffeine_forge/src/: buffer.rs  jit.rs  lib.rs  patch.rs  regalloc.rs  segv_trace.rs  stencil_model.rs  vectorize.rs  x64asm.rs
crates/logicaffeine_forge/stencils/: int_stencils.rs
crates/logicaffeine_jit/: CHANGELOG.md  Cargo.toml  README.md
crates/logicaffeine_jit/src/: lib.rs
crates/logicaffeine_kernel/: CHANGELOG.md  Cargo.toml  README.md
crates/logicaffeine_kernel/examples/: arith_perf.rs  recheck.rs
crates/logicaffeine_kernel/src/: bitvector.rs  cc.rs  certificate.rs  context.rs  elaborate.rs  eval.rs  field_algebra.rs  inductive_compile.rs  lia.rs  lib.rs  omega.rs  positivity.rs  prelude.rs  recheck.rs  recursor.rs  reduction.rs  reify.rs  ring.rs  simp.rs  term.rs  termination.rs  type_checker.rs  word_ring.rs
crates/logicaffeine_kernel/tests/: anon_ctor.rs  bignum_kernel.rs  binder_info.rs  coeff_overflow.rs  coercions.rs  conversion.rs  decide.rs  dot_notation.rs  double_kernel_features.rs  elaborate.rs  eta_unify.rs  imax_universe.rs  indexed_recursor.rs  let_zeta.rs  mutual_inductives.rs  nat_bignum.rs  native_compile.rs  native_decide.rs  native_recursor.rs  nested_inductives.rs  order_axioms.rs  pattern_unify.rs  quotient.rs  recheck.rs  recursor.rs  sprop.rs  structures.rs  surface_elaborate.rs  surface_sugar.rs  universe_consistency.rs  universe_levels.rs  universe_poly.rs  well_founded.rs
crates/logicaffeine_language/: CHANGELOG.md  Cargo.toml  README.md  build.rs
crates/logicaffeine_language/assets/: lexicon.json
crates/logicaffeine_language/examples/: probe.rs
crates/logicaffeine_language/src/: arena_ctx.rs  ast_depth.rs  compile.rs  debug.rs  drs.rs  error.rs  formatter.rs  hw_spec.rs  lambda.rs  lexer.rs  lexicon.rs  lib.rs  mwe.rs  ontology.rs  optimization.rs  pragmatics.rs  proof_convert.rs  registry.rs  scope.rs  session.rs  source_format.rs  style.rs  suggest.rs  teach.rs  token.rs  token_class.rs  transpile.rs  view.rs  visitor.rs
crates/logicaffeine_language/tests/: _tmp_goal.rs  ast_depth.rs  define_block.rs  (+8 more)
crates/logicaffeine_lexicon/: CHANGELOG.md  Cargo.toml  README.md
crates/logicaffeine_lsp/: CHANGELOG.md  Cargo.toml  README.md
crates/logicaffeine_proof/: CHANGELOG.md  Cargo.toml  README.md
crates/logicaffeine_runtime/: CHANGELOG.md  Cargo.toml  README.md
crates/logicaffeine_synth/: CHANGELOG.md  Cargo.toml  README.md
crates/logicaffeine_system/: CHANGELOG.md  Cargo.toml  README.md
crates/logicaffeine_tests/: CHANGELOG.md  Cargo.toml  README.md
crates/logicaffeine_tv/: CHANGELOG.md  Cargo.toml  README.md
crates/logicaffeine_verify/: CHANGELOG.md  Cargo.toml  README.md
crates/logicaffeine_wirebench/: CHANGELOG.md  Cargo.toml  README.md  REPORT_CARD.md  build.rs
logos_core/: Cargo.toml  counter.journal
logos_core/src/: concurrency.rs  distributed.rs  env.rs  file.rs  indexing.rs  io.rs  lib.rs  memory.rs  random.rs  time.rs  types.rs
scripts/wiki_trace/: CHANGELOG.md  Cargo.toml  README.md
(+5962 files in other folders)
