[workspace]
resolver = "2"
members = [
    "crates/logicaffeine_base",
    "crates/logicaffeine_lexicon",
    "crates/logicaffeine_kernel",
    "crates/logicaffeine_data",
    "crates/logicaffeine_system",
    "crates/logicaffeine_language",
    "crates/logicaffeine_proof",
    "crates/logicaffeine_compile",
    "crates/logicaffeine_forge",
    "crates/logicaffeine_jit",
    "crates/logicaffeine_tests",
    "apps/logicaffeine_cli",
    "apps/logicaffeine_web",
    "crates/logicaffeine_lsp",
    "crates/logicaffeine_verify",
    "crates/logicaffeine_tv",
    "crates/logicaffeine_synth",
    "scripts/wiki_trace",
]

# The two Z3-backed crates are excluded from the DEFAULT package set so plain
# `cargo test` / `cargo build` need no Z3 toolchain. They still build whenever
# the `verification` feature pulls them in, and their own unit tests run under
# `cargo test --workspace` (CI and the all-tests command, which provide Z3).
default-members = [
    "crates/logicaffeine_base",
    "crates/logicaffeine_lexicon",
    "crates/logicaffeine_kernel",
    "crates/logicaffeine_data",
    "crates/logicaffeine_system",
    "crates/logicaffeine_language",
    "crates/logicaffeine_proof",
    "crates/logicaffeine_compile",
    "crates/logicaffeine_forge",
    "crates/logicaffeine_jit",
    "crates/logicaffeine_tests",
    "apps/logicaffeine_cli",
    "apps/logicaffeine_web",
    "crates/logicaffeine_lsp",
    "scripts/wiki_trace",
]

[workspace.package]
authors = ["Tristen Harr <tristen@brahmastra-labs.com>"]
license = "BUSL-1.1"
repository = "https://github.com/Brahmastra-Labs/logicaffeine"
homepage = "https://logicaffeine.com"
documentation = "https://docs.rs/logicaffeine"
keywords = ["logic", "proof-assistant", "theorem-prover", "first-order-logic", "formal-methods"]
categories = ["mathematics", "compilers", "science"]
edition = "2021"
rust-version = "1.75"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "warn"

[workspace.dependencies]
bumpalo = "3.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# KNUTH DOCUMENTATION STANDARD (Section 1.8)
[workspace.metadata.docs.rs]
all-features = false
features = ["cli"]
cargo-args = ["--workspace"]
rustdoc-args = ["--document-private-items", "--enable-index-page", "-Zunstable-options"]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.test]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
