[workspace]
resolver = "2"
members = [
    "crates/logicaffeine_base",
    "crates/logicaffeine_lexicon",
    "crates/logicaffeine_kernel",
    "crates/logicaffeine_data",
    "crates/logicaffeine_system",
    "crates/logicaffeine_language",
    "crates/logicaffeine_proof",
    "crates/logicaffeine_compile",
    "crates/logicaffeine_forge",
    "crates/logicaffeine_jit",
    "crates/logicaffeine_runtime",
    "crates/logicaffeine_tests",
    "apps/logicaffeine_cli",
    "apps/logicaffeine_web",
    "crates/logicaffeine_lsp",
    "crates/logicaffeine_verify",
    "crates/logicaffeine_tv",
    "crates/logicaffeine_synth",
    "crates/logicaffeine_wirebench",
    "scripts/wiki_trace",
]

# The two Z3-backed crates are excluded from the DEFAULT package set so plain
# `cargo test` / `cargo build` need no Z3 toolchain. They still build whenever
# the `verification` feature pulls them in, and their own unit tests run under
# `cargo test --workspace` (CI and the all-tests command, which provide Z3).
default-members = [
    "crates/logicaffeine_base",
    "crates/logicaffeine_lexicon",
    "crates/logicaffeine_kernel",
    "crates/logicaffeine_data",
    "crates/logicaffeine_system",
    "crates/logicaffeine_language",
    "crates/logicaffeine_proof",
    "crates/logicaffeine_compile",
    "crates/logicaffeine_forge",
    "crates/logicaffeine_jit",
    "crates/logicaffeine_runtime",
    "crates/logicaffeine_tests",
    "apps/logicaffeine_cli",
    "apps/logicaffeine_web",
    "crates/logicaffeine_lsp",
    "scripts/wiki_trace",
]

[workspace.package]
authors = ["Tristen Harr <tristen@brahmastra-labs.com>"]
license = "BUSL-1.1"
repository = "https://github.com/Brahmastra-Labs/logicaffeine"
homepage = "https://logicaffeine.com"
documentation = "https://docs.rs/logicaffeine"
keywords = ["logic", "proof-assistant", "theorem-prover", "first-order-logic", "formal-methods"]
categories = ["mathematics", "compilers", "science"]
edition = "2021"
rust-version = "1.75"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
bare_urls = "warn"

[workspace.dependencies]
bumpalo = "3.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# KNUTH DOCUMENTATION STANDARD (Section 1.8)
[workspace.metadata.docs.rs]
all-features = false
features = ["cli"]
cargo-args = ["--workspace"]
rustdoc-args = ["--document-private-items", "--enable-index-page", "-Zunstable-options"]
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]

[profile.dev]
debug = "line-tables-only"
split-debuginfo = "unpacked"

[profile.test]
debug = "line-tables-only"
split-debuginfo = "unpacked"

# Optimized test profile for the full-suite GATE only — selected by
# scripts/run-all-tests-fast.sh via `--cargo-profile test-opt`. The heavy tests
# are CPU-bound inside the compiler / VM / optimizer / partial-evaluator
# libraries; building THOSE at opt-level 2 — while the 550+ integration-test
# harness crates stay at opt-level 0 for fast linking — cuts the suite's
# wall-clock by several×. It is gated to the runner so the tight per-crate inner
# loop (`cargo nextest run -p X`) keeps using the default unoptimized `test`
# profile and its fast compile. Debug info is `packed` (not `test`'s `unpacked`)
# so this profile's separate target dir never spawns the per-CGU `.dwo` sea that
# fills the ext4 directory htree.
[profile.test-opt]
inherits = "test"
split-debuginfo = "packed"

[profile.test-opt.package.logicaffeine-compile]
opt-level = 2
[profile.test-opt.package.logicaffeine-forge]
opt-level = 2
[profile.test-opt.package.logicaffeine-jit]
opt-level = 2
[profile.test-opt.package.logicaffeine-kernel]
opt-level = 2
[profile.test-opt.package.logicaffeine-language]
opt-level = 2
[profile.test-opt.package.logicaffeine-system]
opt-level = 2
[profile.test-opt.package.logicaffeine-proof]
opt-level = 2
[profile.test-opt.package.logicaffeine-runtime]
opt-level = 2

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

# Web release build (dx `--release`). Debug info OFF so the wasm carries no DWARF
# sections — binaryen's wasm-opt aborts (SIGABRT) on the DWARF version rustc now
# emits, which silently leaves the served binary un-optimized (12 MB). With no
# DWARF, wasm-opt runs and the size levers below shrink the served binary further;
# opt-level stays at release's 3 so the in-wasm LOGOS interpreter keeps its speed.
[profile.wasm-release]
inherits = "release"
debug = false
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
