[package]
name = "logos_core"
version = "0.1.0"
edition = "2021"
description = "Runtime library for LOGOS programs"

[workspace]

[dependencies]
bumpalo = "3.19.1"
memmap2 = "0.9.9"
rand = "0.8"
# Phase 9: Structured Concurrency
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time"] }
rayon = "1.10"
# Phase 47: Serialization
serde = { version = "1.0", features = ["derive"] }
# Phase 48: Sipping Protocol
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }
