[package]
name = "logos_core"
version = "0.1.0"
edition = "2021"
description = "Runtime library for LOGOS programs"

[workspace]

[dependencies]
bumpalo = "3.19.1"
memmap2 = "0.9.9"
rand = "0.8"
# Phase 9: Structured Concurrency
# Phase 53: Added "fs" and "io-util" for VFS
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs", "io-util"] }
# Phase 53: CRC32 for journal checksums
crc32fast = "1.3"
rayon = "1.10"
# Phase 47: Serialization
serde = { version = "1.0", features = ["derive"] }
# Phase 48: Sipping Protocol
sha2 = "0.10"
uuid = { version = "1.0", features = ["v4"] }
# Phase 51: P2P Networking (The Mesh)
libp2p = { version = "0.54", features = [
    "tcp",
    "quic",
    "noise",
    "yamux",
    "mdns",
    "request-response",
    "gossipsub",  # Phase 52: GossipSub for CRDT sync
    "macros",
    "tokio"
] }
bincode = "1.3"
futures = "0.3"
async-trait = "0.1"
# Phase 52: Lazy statics for GossipSub subscriptions
once_cell = "1.19"

[dev-dependencies]
tempfile = "3.10"
