[package]
name = "logicaffeine-cli"
version = "0.6.0"
edition = "2021"
description = "CLI tool for logicaffeine (largo)"
license = "BUSL-1.1"

[lib]
name = "logicaffeine_cli"
path = "src/lib.rs"

[[bin]]
name = "largo"
path = "src/main.rs"

[dependencies]
# Core language crates
logicaffeine-base = { path = "../../crates/logicaffeine_base" }
logicaffeine-kernel = { path = "../../crates/logicaffeine_kernel" }
logicaffeine-language = { path = "../../crates/logicaffeine_language" }
logicaffeine-compile = { path = "../../crates/logicaffeine_compile" }

# Optional verification
logicaffeine-verify = { path = "../../crates/logicaffeine_verify", optional = true }

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
toml = "0.8"
ureq = { version = "2.9", features = ["json"] }
flate2 = "1.0"
tar = "0.4"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"

[features]
default = []
verification = ["logicaffeine-verify"]
