[package]
name = "logicaffeine-cli"
version = "0.9.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"
description = "CLI tool for logicaffeine (largo)"
readme = "README.md"

[lib]
name = "logicaffeine_cli"
path = "src/lib.rs"

[[bin]]
name = "largo"
path = "src/main.rs"

[dependencies]
# Core language crates
logicaffeine-base = { version = "0.9.0", path = "../../crates/logicaffeine_base" }
logicaffeine-kernel = { version = "0.9.0", path = "../../crates/logicaffeine_kernel" }
logicaffeine-language = { version = "0.9.0", path = "../../crates/logicaffeine_language" }
logicaffeine-compile = { version = "0.9.0", path = "../../crates/logicaffeine_compile" }

# CLI dependencies
clap = { version = "4.4", features = ["derive"] }
futures = "0.3"
rand = "0.8"
toml = "0.8"
ureq = { version = "2.9", features = ["json"] }
flate2 = "1.0"
tar = "0.4"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"

[features]
default = []
