[package]
name = "logicaffeine-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"
description = "largo — the LOGOS build tool: new/init/build/run/check/verify/publish for logicaffeine projects"
readme = "README.md"

[lib]
name = "logicaffeine_cli"
path = "src/lib.rs"

[[bin]]
name = "largo"
path = "src/main.rs"

[dependencies]
# Core language crates
logicaffeine-base = { workspace = true }
logicaffeine-kernel = { workspace = true }
logicaffeine-language = { workspace = true }
# `wasm-jit` enables the BigInt-linker tier (`compile_to_wasm_linked`, used by `--emit wasm-linked`).
# largo is a native dev tool and a distinct binary from the web app, so this feature does NOT unify
# into the `logicaffeine-web` build.
logicaffeine-compile = { workspace = true, features = ["wasm-jit"] }
# `largo sat` / `largo prove` — already in the graph via logicaffeine-compile.
logicaffeine-proof = { workspace = true }
# Z3 static verification (`largo verify`) — the `verification` feature.
logicaffeine-verify = { workspace = true, optional = true }

# CLI dependencies
anstream = "0.6"
anstyle = "1"
clap = { version = "4.4", features = ["derive"] }
clap_complete = "4.4"
futures = "0.3"
rand = "0.8"
toml = "0.8"
toml_edit = "0.22"
ureq = { version = "2.9", features = ["json"] }
flate2 = "1.0"
tar = "0.4"
dirs = "5.0"
rustyline = "15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# The native tier (copy-and-patch JIT) — native targets only.
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
logicaffeine-jit = { workspace = true }

[dev-dependencies]
tempfile = "3"

[features]
default = []
# `largo verify` against the system Z3 (dynamic link).
verification = ["dep:logicaffeine-verify"]
# The release `largo-full` flavor: verification with Z3 built from the
# z3-sys vendored source and statically linked (needs cmake + C++ + libclang).
verification-static = ["verification", "logicaffeine-verify/static-link-z3"]
