[package]
name = "logicaffeine-web"
version = "0.8.14"
edition = "2021"
description = "Web-based IDE for logicaffeine"
license = "BUSL-1.1"
publish = false

[dependencies]
# Core crates (Tier 0-3)
logicaffeine-base = { path = "../../crates/logicaffeine_base" }
logicaffeine-lexicon = { path = "../../crates/logicaffeine_lexicon", features = ["dynamic-lexicon"] }
logicaffeine-kernel = { path = "../../crates/logicaffeine_kernel" }
logicaffeine-data = { path = "../../crates/logicaffeine_data" }
logicaffeine-system = { path = "../../crates/logicaffeine_system", features = ["persistence"] }
logicaffeine-language = { path = "../../crates/logicaffeine_language", features = ["dynamic-lexicon"] }
logicaffeine-proof = { path = "../../crates/logicaffeine_proof" }
logicaffeine-compile = { path = "../../crates/logicaffeine_compile" }

# Web framework
dioxus = { version = "0.6", features = ["web", "router"] }

# Web platform bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "Document", "Element", "HtmlElement", "Window", "History",
    "HtmlDivElement", "Event", "KeyboardEvent", "InputEvent",
    "Storage", "Navigator", "Clipboard", "UrlSearchParams",
    "IntersectionObserver", "IntersectionObserverInit", "IntersectionObserverEntry",
    "DomRect", "ScrollIntoViewOptions", "ScrollBehavior", "ScrollLogicalPosition",
    "ScrollToOptions"
] }
wasm-bindgen-futures = "0.4"
gloo-timers = { version = "0.3", features = ["futures"] }
gloo-net = "0.6"
gloo-storage = "0.3"

# Utilities
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"
include_dir = "0.7"
bumpalo = "3.19.1"

# Async support
async-recursion = "1.1"

[features]
default = []
