[package]
name = "logicaffeine-base"
version = "0.8.7"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"
description = "Pure structural atoms for logicaffeine - arena, tokens, spans"
readme = "README.md"

[dependencies]
bumpalo = "3.19"
