[package]
name = "logicaffeine-compile"
version = "0.8.5"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"
description = "LOGOS compilation pipeline - codegen and interpreter"
readme = "README.md"

[features]
default = ["codegen"]
codegen = []
interpreter-only = []

[dependencies]
logicaffeine-base = { version = "0.8.5", path = "../logicaffeine_base" }
logicaffeine-language = { version = "0.8.5", path = "../logicaffeine_language" }
logicaffeine-kernel = { version = "0.8.5", path = "../logicaffeine_kernel" }
logicaffeine-data = { version = "0.8.5", path = "../logicaffeine_data" }
logicaffeine-system = { version = "0.8.5", path = "../logicaffeine_system", features = ["persistence"] }
logicaffeine-proof = { version = "0.8.5", path = "../logicaffeine_proof" }

# Runtime dependencies
async-recursion = "1.1"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Standard library
include_dir = "0.7"

# WASM async sleep support
[target.'cfg(target_arch = "wasm32")'.dependencies]
gloo-timers = { version = "0.3", features = ["futures"] }

[dev-dependencies]
tempfile = "3.10"
