[package]
name = "logicaffeine-data"
version = "0.8.0"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"
description = "WASM-safe data structures and CRDTs - NO IO"
readme = "README.md"

[dependencies]
logicaffeine-base = { version = "0.8.0", path = "../logicaffeine_base" }
serde = { version = "1.0", features = ["derive"] }
# CRITICAL: NO IO DEPENDENCIES - Lamport Invariant
# No tokio, libp2p, std::time::SystemTime allowed

# getrandom is WASM-compatible for random replica ID generation
# js feature enables Web Crypto API on wasm32-unknown-unknown
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
getrandom = "0.2"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }

[dev-dependencies]
bincode = "1.3"
