[package]
name = "logicaffeine-forge"
version = "0.9.17"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"
description = "Copy-and-patch JIT for LOGOS — executable-memory layer and stencil runtime (native only)."
readme = "README.md"

[lints]
workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
] }

[build-dependencies]
object = "0.36"
