[package]
name = "logicaffeine-jit"
version = "0.9.17"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"
description = "The LOGOS native tier — wires the copy-and-patch forge JIT into the bytecode VM (native only)."

[lints]
workspace = true

[dependencies]
logicaffeine-compile = { version = "0.9.17", path = "../logicaffeine_compile" }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
logicaffeine-forge = { version = "0.9.17", path = "../logicaffeine_forge" }
