[package]
name = "logicaffeine-jit"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true
license = "BUSL-1.1"
description = "The LOGOS native tier — wires the copy-and-patch forge JIT into the bytecode VM (native only)."
readme = "README.md"

[lints]
workspace = true

[dependencies]
logicaffeine-compile = { workspace = true }

# The forge JIT builds only on x86_64 System V (Linux + macOS); elsewhere this
# crate is empty and the VM runs bytecode, so the dependency is target-gated to
# match (keeping forge's build.rs off unsupported targets entirely).
[target.'cfg(all(target_arch = "x86_64", not(target_os = "windows")))'.dependencies]
logicaffeine-forge = { workspace = true }
